[package]
name = "test262-harness"
version = "0.1.1"
authors = ["rfm <r@robertmasen.pizza>"]
repository = "https://github.com/rusty-ecma/test262-harness"
edition = "2018"
description = "A test bed for the ecma 262 test suite"
license = "MIT"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde = { version = "1", features = ["derive"] }
serde_yaml = "0"
walkdir = "2"